[gd_scene load_steps=5 format=3 uid="uid://qnpbftaq5wlq"]

[ext_resource type="Script" path="res://scenes/world.gd" id="1_ckc2d"]
[ext_resource type="PackedScene" uid="uid://fhw12tltn8i0" path="res://scenes/walls.tscn" id="2_6om2j"]
[ext_resource type="PackedScene" uid="uid://c8g4e3b520vkw" path="res://scenes/player.tscn" id="6_f68my"]
[ext_resource type="PackedScene" uid="uid://7e3owaofmbiv" path="res://scenes/ball.tscn" id="7_nrwd2"]

[node name="World" type="Node2D"]
script = ExtResource("1_ckc2d")

[node name="Walls" parent="." instance=ExtResource("2_6om2j")]
position = Vector2(384, 208)

[node name="Player" parent="." instance=ExtResource("6_f68my")]
position = Vector2(640, 688)

[node name="Ball" parent="." instance=ExtResource("7_nrwd2")]
position = Vector2(640, 676)
scale = Vector2(0.5, 0.5)

[node name="PlayerRespawnLocation" type="Marker2D" parent="."]
position = Vector2(640, 688)

[node name="BallRespawnLocation" type="Marker2D" parent="."]
position = Vector2(640, 676)

[node name="LayoutContainer" type="Node2D" parent="."]

[connection signal="lost" from="Ball" to="." method="_on_ball_lost"]
